prevent home overflow

--- a/src/pages/home.less
+++ b/src/pages/home.less
@@ -4,6 +4,9 @@
 }
 
 .home {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   .title {
     background-color: black;
     color: white;
